trunk/Archive2/9f/03b54d9cc85648/output
main.cpp:2:5: error: unknown type name 'interrupted'
    interrupted
    ^
main.cpp:3:13: error: expected ';' after top level declarator
    Returned: 0
            ^
            ;
main.cpp:3:15: error: expected unqualified-id
    Returned: 0
              ^
3 errors generated.
